# bingus-files

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.json  config.env.default  index.js  logger.js  package-lock.json  package.json
bingus-http/: Cargo.toml
bingus-http/proc-macro/: Cargo.toml
bingus-http/proc-macro/src/: lib.rs
bingus-http/src/: handler.rs  http.rs  lib.rs  method.rs  request.rs  response.rs  route.rs  status.rs
src/: config.rs  header.rs  http.rs  main.rs  serve_static.rs  silly.rs  status.rs
static/: catppuccin.css  index.html  main.js  rateCalc.js  style.css
views/: index.ejs
