[package]
name = "bingus-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fallocate"]
fallocate = ["dep:libc"]

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", default_features = false, features = ["http1", "tokio", "tower-log", "tracing"] }
env_logger = "0.10.0"
futures = "0.3.29"
humansize = "2.1.3"
libc = { version = "0.2.150", optional = true }
log = "0.4.20"
owo-colors = "3.5.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
toml = "0.8.2"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
