[package]
name = "bingus-files"
version = "3.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", default-features = false, features = ["http1", "tokio"] }
chrono = "0.4.31"
futures = "0.3.29"
humansize = "2.1.3"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["fs", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = "0.7.10"
toml = "0.8.2"
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-br", "compression-deflate", "compression-gzip"] } # don't enable zstd as browsers generally do not support it and it takes years to build
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
urlencoding = "2.1.3"

