[package]
name = "bingus-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bingus-http-proc-macro = { path = "proc-macro" }
colored = "2.0.4"
log = "0.4.20"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
